--- a/supplemental_materials/README
+++ b/supplemental_materials/README
@@ -1,1 +1,2 @@
-
+These files are scripts created throughout the experimentation process and are reported for sake of historical accuracy.
+The scripts in this folder are not meant to be the final analysis.
